--- a/Django/Dev/Ecommerce/src/templates/auth/register.html
+++ b/Django/Dev/Ecommerce/src/templates/auth/register.html
@@ -14,27 +14,39 @@
     </head>
 
     <body>
+        <div class="text-center">
+            <h1>Hello, world!</h1>
+            <p class="text-muted">{{ title }}</p>
+        </div>
         <div class="container">
-
-            <div class="text-center">
-                <h1>Hello, world!</h1>
-                <p class="text-muted">{{ title }}</p>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col">{{ content }}</div>
-                </div>
-            </div>
-            {% if user.is_authenticated %}
             <div class="row">
                 <div class="col">
-                    <h1>Pemium</h1>
-                    {{ premium_content }}
+                    <p>{{ content }}</p>
 
+                    <div class="col-sm-6 col-12">
+                        <form action="" method="POST">
+                            {% csrf_token %}
+                            {% for field in form %}
+                            <div class="form-group row">
+                                {{ field.label_tag }}
+                                {{ field.errors }}
+                                {{ field }}
+                                {% if field.help_text %}
+                                <p class="help">{{ field.help_text|safe }}</p>
+                                {% endif %}
+                            </div>
+                            {% endfor %}
+
+                            <div class="form-group row">
+                                <button class="btn btn-info" type="submit">Submit</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
-            {% endif %}
         </div>
+
+
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
