--- a/Django/Dev/Ecommerce/src/templates/home_page.html
+++ b/Django/Dev/Ecommerce/src/templates/home_page.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 
@@ -9,6 +10,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
             integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href='{% static "css/main.css" %}'>
 
         <title>Hello, world!</title>
     </head>
@@ -22,7 +24,13 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col">{{ content }}</div>
+                    <div class="col">
+                        <p>
+                            {{ content }}
+                        </p>
+
+                        <img src="{% static 'img/gundam-versus-do.jpg' %}" class="img-fluid" alt="gundam">
+                    </div>
                 </div>
             </div>
             {% if user.is_authenticated %}
