Added navbar, css, js, base templates
- restructured the folder location
- base.html is now the "base" template for  the app.

--- a/Django/Dev/Ecommerce/src/apps/products/templates/products/detail.html
+++ b/Django/Dev/Ecommerce/src/apps/products/templates/products/detail.html
@@ -1,5 +1,10 @@
-{{ object.title }}}<br>
-{{ object.description }}}<br>
+{% extends "base.html" %}
+
+
+{% block content %}
+
+{{ object.title }}<br>
+{{ object.description }}<br>
 {{ object.price }}<br>
 
 {% if object.image %}
@@ -7,3 +12,5 @@
 <img src="{{ object.image.url }}" alt="" srcset="" class="img-fluid">
 
 {% endif %}
+
+{% endblock %}
