--- a/Django/Dev/Ecommerce/src/apps/products/templates/products/list.html
+++ b/Django/Dev/Ecommerce/src/apps/products/templates/products/list.html
@@ -1,6 +1,15 @@
+{% extends "base.html" %}
 
-{% for obj in object_list %}
 
-<a href="{{ obj.get_absolute_url }}">{{ obj.title }}</a></br>
+{% block content %}
+<div class="container">
+    <div class="row">
+        {% for obj in object_list %}
+        <div class="col">
+            {% include 'products/snippets/card.html' with instance=obj %}
+        </div>
+        {% endfor %}
+    </div>
+</div>
 
-{% endfor %}
+{% endblock %}
