added cards and navbar

--- a/Django/Dev/Ecommerce/src/apps/products/templates/products/snippets/card.html
+++ b/Django/Dev/Ecommerce/src/apps/products/templates/products/snippets/card.html
@@ -8,7 +8,12 @@
 
         <div class="card-body">
           <h5 class="card-title">{{ instance.title }}</h5>
-          <p class="card-text">{{ instance.description }}.</p>
+          <p class="card-text">{{ instance.description |truncatewords:12 }}.</p>
           <a href="{{ instance.get_absolute_url }}" class="btn btn-primary">View</a>
+          <a href="{% url 'products:detail' slug=instance.slug %}" class="btn btn-success">URL Shortcut</a>
         </div>
 </div>
+
+{% comment "Another way of doing routes" %}
+<a href="{% url 'products:detail' slug=instance.slug %}" class="btn btn-success">URL Shortcut</a>
+{% endcomment %}
