--- a/Django/Dev/Ecommerce/src/templates/auth/login.html
+++ b/Django/Dev/Ecommerce/src/templates/auth/login.html
@@ -1,60 +1,22 @@
-<!doctype html>
-<html lang="en">
+{% extends "base.html" %}
 
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% block content %}
+<h1>Login</h1>
+<form action="" method="POST">
+    {% csrf_token %}
+    {% for field in form %}
+    <div class="form-group row">
+        {{ field.label_tag }}
+        {{ field.errors }}
+        {{ field }}
+        {% if field.help_text %}
+        <p class="help">{{ field.help_text|safe }}</p>
+        {% endif %}
+    </div>
+    {% endfor %}
 
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-            integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-        <title>Hello, world!</title>
-    </head>
-
-    <body>
-        <div class="text-center">
-            <h1>Hello, world!</h1>
-            <p class="text-muted">{{ title }}</p>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <p>{{ content }}</p>
-
-                    <div class="col-sm-6 col-12">
-                        <form action="" method="POST">
-                            {% csrf_token %}
-                            {% for field in form %}
-                            <div class="form-group row">
-                                {{ field.label_tag }}
-                                {{ field.errors }}
-                                {{ field }}
-                                {% if field.help_text %}
-                                <p class="help">{{ field.help_text|safe }}</p>
-                                {% endif %}
-                            </div>
-                            {% endfor %}
-
-                            <div class="form-group row">
-                                <button class="btn btn-info" type="submit">Submit</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-            crossorigin="anonymous"></script>
-    </body>
-
-</html>
+    <div class="form-group row">
+        <button class="btn btn-info" type="submit">Submit</button>
+    </div>
+</form>
+{% endblock %}
