--- a/Django/Dev/Ecommerce/src/templates/base.html
+++ b/Django/Dev/Ecommerce/src/templates/base.html
@@ -14,10 +14,10 @@
 
     <body>
         {% include 'base/navbar.html' with brand_name='eCommerce' %}
-
+        <div class="container">
         <!-- Block Content -->
         {% block content %} {% endblock %}
-
+        </div>
         <!--js.html Block -->
         {% include 'base/js.html' %}
        
