added cart and  updated views

--- a/Django/Dev/Ecommerce/src/templates/home_page.html
+++ b/Django/Dev/Ecommerce/src/templates/home_page.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-
+<!-- in case we wanted to use different css  -->
 {% block base_head %}
 <link rel="stylesheet" href='{% static "css/main.css" %}'>
 {% endblock %}
