--- a/Django/Dev/Ecommerce/src/apps/carts/templates/carts/home.html
+++ b/Django/Dev/Ecommerce/src/apps/carts/templates/carts/home.html
@@ -3,5 +3,42 @@
 {% block content %}
 <h1 class="none">Cart</h1>
 
+{% if cart.products.exists %}
+<table class="table cart-table">
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>Product Name</th>
+            <th>Product Price</th>
+        </tr>
+    </thead>
+    <tbody class='cart-body'>
+        {% for product in cart.products.all %}
+        <tr class='cart-product'>
+            <th scope="row">{{ forloop.counter }}</th>
+            <td><a href='{{ product.get_absolute_url }}'>{{ product.title }}</a>
+            </td>
+            <td>{{ product.price }}</td>
+        </tr>
+        {% endfor %}
+        <tr>
+            <td colspan="2"></td>
+            <td><b>Subtotal</b> $<span class='cart-subtotal'>{{ cart.subtotal }}</span></td>
+        </tr>
+        <tr>
+            <td colspan="2"></td>
+            <td><b>Total</b> $<span class='cart-total'>{{ cart.total }}</span></td>
+        </tr>
+        <tr>
+            <td colspan="2"></td>
+            <td><a class='btn btn-lg btn-success' href="#">Checkout</a></td>
+        </tr>
 
+    </tbody>
+</table>
+
+
+{% else %}
+<p class="lead">Cart is empty</p>
+{% endif %}
 {% endblock %}
