--- a/Django/Dev/Ecommerce/src/templates/base.html
+++ b/Django/Dev/Ecommerce/src/templates/base.html
@@ -8,8 +8,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
         {% include 'base/css.html' %}
+        <!-- from home_page -->
         {% block base_head %} {% endblock %}
-        <title>Hello, world!</title>
+        <title>Ecommerce</title>
     </head>
 
     <body>
