--- a/Django/Dev/Ecommerce/src/templates/base/navbar.html
+++ b/Django/Dev/Ecommerce/src/templates/base/navbar.html
@@ -4,6 +4,8 @@
 {% url 'products:list' as product_list_url %}
 {% url 'login' as login_url %}
 {% url 'register' as register_url %}
+{% url 'logout_view' as logout_url %}
+{% url 'cart:home' as cart_url %}
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
     <div class="container">
@@ -30,27 +32,19 @@
                     <a class="nav-link" href="{{ product_list_url }}">Products</a>
                 </li>
                 {% if user.is_authenticated %}
-                <li class="nav-item {% if request.path == login %} active {% endif %}">
-                    <a class="nav-link" href="{{ login }}">Logout</a>
+                <li class="nav-item {% if request.path == logout_url %} active {% endif %}">
+                    <a class="nav-link" href="{{ logout_url }}">Logout</a>
                 </li>
                 {% else %}
                 <li class="nav-item {% if request.path == register_url %} active {% endif %}">
-                    <a class="nav-link" href="{{ register }}">Register</a>
+                    <a class="nav-link" href="{{ register_url }}">Register</a>
                 </li>
                 <li class="nav-item {% if request.path == login_url %} active {% endif %}">
-                    <a class="nav-link" href="{{ login }}">Login</a>
+                    <a class="nav-link" href="{{ login_url }}">Login</a>
                 </li>
                 {% endif %}
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        Dropdown link
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
+                <li class="nav-item {% if request.path == cart_url %} active {% endif %}">
+                    <a class="nav-link" href="{{ cart_url }}"><i class="fas fa-shopping-cart"></i> | {{ request.session.cart_items }}</a>
                 </li>
             </ul>
             {% include 'search/snippets/search-form.html' %}
