--- a/Django/Dev/Ecommerce/src/apps/products/templates/products/snippets/update-cart.html
+++ b/Django/Dev/Ecommerce/src/apps/products/templates/products/snippets/update-cart.html
@@ -1,11 +1,15 @@
 <form method="POST" action='{% url "cart:update" %}' class="form my-2 my-lg-0">
         {% csrf_token %}
+        <input type='hidden' name='product_id' value='{{ product.id }}' />
 
-    <input type='hidden' name='product_id' value='{{ product.id }}' />
-    {% if product in cart.products.all %}
-       <p>In cart <button type="submit" class="btn btn-info">Remove</button></p> 
+    {% if in_cart %}
+    <button type="submit" class="btn btn-sm btn-info p-0">Remove</button>
     {% else %}
-        <button type="submit" class="btn btn-success">Add to cart</button>
-    {% endif %}
+        {% if product in cart.products.all %}
+        <p>In cart <button type="submit" class="btn btn-info">Remove</button></p> 
+        {% else %}
+            <button type="submit" class="btn btn-success">Add to cart</button>
+        {% endif %}
+    {% endif %} 
 
 </form>
