--- a/Django/Dev/Ecommerce/src/apps/carts/templates/carts/home.html
+++ b/Django/Dev/Ecommerce/src/apps/carts/templates/carts/home.html
@@ -17,6 +17,7 @@
         <tr class='cart-product'>
             <th scope="row">{{ forloop.counter }}</th>
             <td><a href='{{ product.get_absolute_url }}'>{{ product.title }}</a>
+                {% include 'products/snippets/update-cart.html' with product=product cart=cart in_cart=True %}
             </td>
             <td>{{ product.price }}</td>
         </tr>
@@ -31,7 +32,7 @@
         </tr>
         <tr>
             <td colspan="2"></td>
-            <td><a class='btn btn-lg btn-success' href="#">Checkout</a></td>
+            <td><a class='btn btn-lg btn-success' href='{% url "cart:checkout" %}'>Checkout</a></td>
         </tr>
 
     </tbody>
