--- a/Django/Dev/Ecommerce/src/templates/base/navbar.html
+++ b/Django/Dev/Ecommerce/src/templates/base/navbar.html
@@ -2,9 +2,9 @@
 {% url 'home' as home_url %}
 {% url 'contact' as contact_url %}
 {% url 'products:list' as product_list_url %}
-{% url 'login' as login_url %}
-{% url 'register' as register_url %}
-{% url 'logout_view' as logout_url %}
+{% url 'account:login' as login_url %}
+{% url 'account:register' as register_url %}
+{% url 'logout' as logout_url %}
 {% url 'cart:home' as cart_url %}
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
