--- a/Django/Dev/Ecommerce/src/apps/accounts/templates/accounts/login.html
+++ b/Django/Dev/Ecommerce/src/apps/accounts/templates/accounts/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>Login</h1>
-<form action="" method="POST">
+<form method="POST" action='{% url "account:login" %}'>
     {% csrf_token %}
     {% for field in form %}
     <div class="form-group row">
