--- a/Django/Dev/Ecommerce/src/apps/carts/templates/carts/checkout.html
+++ b/Django/Dev/Ecommerce/src/apps/carts/templates/carts/checkout.html
@@ -1,9 +1,26 @@
 {% extends "base.html" %}
 
 {% block content %}
+
+
+{% if not billing_profile %}
+<div class='row text-center'>
+    <div class='col-12 col-md-6'>
+        <p class='lead'>Login</p>
+        {% include 'accounts/snippets/form.html' with form=login_form next_url=request.build_absolute_uri %}
+    </div>
+    <div class='col-12 col-md-6'>
+        Continue as Guest
+    </div>
+
+</div>
+
+{% else %}
 <h1>Checkout</h1>
 
 <p>Car Total: {{ object.cart.total }}</p>
 <p>Shipping Total: {{ object.shipping_total }}</p>
 <p>Order Total: {{ object.total }} </p>
+
+{% endif %}
 {% endblock %}
