added guestEmail model and forms

--- a/Django/Dev/Ecommerce/src/apps/accounts/templates/accounts/snippets/form.html
+++ b/Django/Dev/Ecommerce/src/apps/accounts/templates/accounts/snippets/form.html
@@ -1,5 +1,4 @@
-<form method="POST" action='{% url "account:login" %}'>
-    {% csrf_token %}
+<form method='POST' action='{% if action_url %}{{ action_url }}{% else %}{% url "account:login" %}{% endif %}'> {% csrf_token %}
     {% if next_url %}
     <input type='hidden' name='next' value='{{ next_url }}' />
     {% endif %}
