--- a/Django/Dev/Ecommerce/src/apps/carts/templates/carts/checkout.html
+++ b/Django/Dev/Ecommerce/src/apps/carts/templates/carts/checkout.html
@@ -5,24 +5,48 @@
 
 {% if not billing_profile %}
 <div class='row text-center'>
-    <div class='col-12 col-md-6'>
+    <div class='col-12 col-md-5'>
         <p class='lead'>Login</p>
         {% include 'accounts/snippets/form.html' with form=login_form next_url=request.build_absolute_uri %}
     </div>
-    <div class='col-12 col-md-6'>
+    <div class='col-12 col-md-5'>
         Continue as Guest
         {% url "account:guest_register" as guest_register_url %}
         {% include 'accounts/snippets/form.html' with form=guest_form next_url=request.build_absolute_uri action_url=guest_register_url %}
     </div>
-
+    
 </div>
 
 {% else %}
-<h1>Checkout</h1>
 
-<p>Car Total: {{ object.cart.total }}</p>
-<p>Shipping Total: {{ object.shipping_total }}</p>
-<p>Order Total: {{ object.total }} </p>
+
+    {% if not object.shipping_address %}
+    <div class="row">
+        <div class="col-md-6 mx-auto col-10">
+            <p class="lead">Shipping Address</p>
+            <hr>
+            {% url "address:checkout_address_create" as checkout_address_create %}
+            {% include 'addresses/snippets/form.html' with form=address_form next_url=request.build_absolute_uri action_url=checkout_address_create address_type='shipping' %}
+        </div>
+    </div>
+
+    {% if not object.billing_address %}
+    <div class="row">
+        <div class="col-md-6 mx-auto col-10">
+            <p class="lead">Billing Address</p>
+            <hr>
+            {% url "address:checkout_address_create" as checkout_address_create %}
+            {% include 'addresses/snippets/form.html' with form=billing_address_form next_url=request.build_absolute_uri action_url=checkout_address_create address_type='billing' %}
+        </div>
+    </div>
+
+    {% else %}
+            <h1>Complete Checkout</h1>
+            <p>Car Total: {{ object.cart.total }}</p>
+            <p>Shipping Total: {{ object.shipping_total }}</p>
+            <p>Order Total: {{ object.total }} </p>
+            <button>Checkout</button>
+    {% endif %}
 
 {% endif %}
 {% endblock %}
