--- a/Django/Dev/Ecommerce/src/apps/carts/templates/carts/checkout.html
+++ b/Django/Dev/Ecommerce/src/apps/carts/templates/carts/checkout.html
@@ -20,33 +20,36 @@
 {% else %}
 
 
-    {% if not object.shipping_address %}
-    <div class="row">
-        <div class="col-md-6 mx-auto col-10">
-            <p class="lead">Shipping Address</p>
-            <hr>
-            {% url "address:checkout_address_create" as checkout_address_create %}
-            {% include 'addresses/snippets/form.html' with form=address_form next_url=request.build_absolute_uri action_url=checkout_address_create address_type='shipping' %}
+        {% if not object.shipping_address %}
+        <div class="row">
+            <div class="col-md-6 mx-auto col-10">
+                <p class="lead">Shipping Address</p>
+                <hr>
+                {% url "address:checkout_address_create" as checkout_address_create %}
+                {% include 'addresses/snippets/form.html' with form=address_form next_url=request.build_absolute_uri action_url=checkout_address_create address_type='shipping' %}
+            </div>
         </div>
-    </div>
 
-    {% if not object.billing_address %}
-    <div class="row">
-        <div class="col-md-6 mx-auto col-10">
-            <p class="lead">Billing Address</p>
-            <hr>
-            {% url "address:checkout_address_create" as checkout_address_create %}
-            {% include 'addresses/snippets/form.html' with form=billing_address_form next_url=request.build_absolute_uri action_url=checkout_address_create address_type='billing' %}
+        {% elif not object.billing_address %}
+        <div class="row">
+            <div class="col-md-6 mx-auto col-10">
+                <p class="lead">Billing Address</p>
+                <hr>
+                {% url "address:checkout_address_create" as checkout_address_create %}
+                {% include 'addresses/snippets/form.html' with form=address_form next_url=request.build_absolute_uri action_url=checkout_address_create address_type='billing' %}
+            </div>
         </div>
-    </div>
 
-    {% else %}
-            <h1>Complete Checkout</h1>
-            <p>Car Total: {{ object.cart.total }}</p>
-            <p>Shipping Total: {{ object.shipping_total }}</p>
-            <p>Order Total: {{ object.total }} </p>
-            <button>Checkout</button>
+        {% else %}
+                <h1>Complete Checkout</h1>
+                <p>Car Total: {{ object.cart.total }}</p>
+                <p>Shipping Total: {{ object.shipping_total }}</p>
+                <p>Order Total: {{ object.total }} </p>
+                <form class="form" action="" method="POST">
+                    {% csrf_token %}
+                    <button class="btn btn-success" type="submit">Checkout</button>
+                </form>
+        {% endif %}
+
     {% endif %}
-
-{% endif %}
 {% endblock %}
