--- a/Django/Dev/Ecommerce/src/apps/addresses/templates/addresses/snippets/previous_addresses.html
+++ b/Django/Dev/Ecommerce/src/apps/addresses/templates/addresses/snippets/previous_addresses.html
@@ -12,7 +12,7 @@
 
             {% for address in address_qs %}
             <label for="address-{{ address.id }}">
-                <input type="radio" name="Shipping_address" id="address-{{ address.id }}" value="{{ address.id }}">
+                <input type="radio" name="shipping_address" id="address-{{ address.id }}" value="{{ address.id }}">
                 {{ address.address_line_1 }}
             </label><br/>
             {% endfor %}
