--- a/Django/Dev/Ecommerce/src/apps/carts/templates/carts/checkout.html
+++ b/Django/Dev/Ecommerce/src/apps/carts/templates/carts/checkout.html
@@ -56,7 +56,10 @@
 
         {% else %}
                 <h1>Complete Checkout</h1>
-                <p>Car Total: {{ object.cart.total }}</p>
+                <p>Cart Items: {% for product in object.cart.products.all %} {{ product }} {% if not forloop.last %}, {% endif %} {% endfor %}</p>
+                <p>Shipping Address {{ object.shipping_address.get_address }}</p>
+                <p>Billing Address {{ object.shipping_address.get_address }}</p>
+                <p>Cart Total: {{ object.cart.total }}</p>
                 <p>Shipping Total: {{ object.shipping_total }}</p>
                 <p>Order Total: {{ object.total }} </p>
                 <form class="form" action="" method="POST">
