--- a/Django/Dev/Ecommerce/src/apps/products/templates/products/snippets/update-cart.html
+++ b/Django/Dev/Ecommerce/src/apps/products/templates/products/snippets/update-cart.html
@@ -1,4 +1,4 @@
-<form method="POST" action='{% url "cart:update" %}' class="form my-2 my-lg-0">
+<form id="form-product-ajax" method="POST" action='{% url "cart:update" %}' class="form my-2 my-lg-0">
         {% csrf_token %}
         <input type='hidden' name='product_id' value='{{ product.id }}' />
 
