--- a/Django/Dev/Ecommerce/src/templates/base/js.html
+++ b/Django/Dev/Ecommerce/src/templates/base/js.html
@@ -6,3 +6,15 @@
  crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
  crossorigin="anonymous"></script>
+
+<script type="text/javascript">
+    'use strict';
+    $(document).ready(function(){
+        let productForm =$("#form-product-ajax")
+        
+        productForm.submit((e)=>{
+            e.preventDefault();
+            
+        })
+    })
+</script>
