--- a/Django/Dev/Ecommerce/src/apps/products/templates/products/snippets/update-cart.html
+++ b/Django/Dev/Ecommerce/src/apps/products/templates/products/snippets/update-cart.html
@@ -1,15 +1,17 @@
-<form id="form-product-ajax" method="POST" action='{% url "cart:update" %}' class="form my-2 my-lg-0">
+<form class="form-product-ajax form my-2 my-lg-0" method="POST" action='{% url "cart:update" %}' >
         {% csrf_token %}
         <input type='hidden' name='product_id' value='{{ product.id }}' />
 
     {% if in_cart %}
     <button type="submit" class="btn btn-sm btn-info p-0">Remove</button>
     {% else %}
+    <span class="submit-span">
         {% if product in cart.products.all %}
-        <p>In cart <button type="submit" class="btn btn-info">Remove</button></p> 
+            In cart<button type="submit" class="btn btn-info">Remove</button>
         {% else %}
             <button type="submit" class="btn btn-success">Add to cart</button>
         {% endif %}
+    </span>
     {% endif %} 
 
 </form>
