--- a/Django/Dev/Ecommerce/src/templates/base/js.html
+++ b/Django/Dev/Ecommerce/src/templates/base/js.html
@@ -1,6 +1,8 @@
  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
  {% load static %}
- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+ <script
+ src="https://code.jquery.com/jquery-3.3.1.min.js"
+ integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
  crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
  crossorigin="anonymous"></script>
@@ -10,11 +12,30 @@
 <script type="text/javascript">
     'use strict';
     $(document).ready(function(){
-        let productForm =$("#form-product-ajax")
+        let productForm =$(".form-product-ajax")
         
-        productForm.submit((e)=>{
+        productForm.submit(function(e){
             e.preventDefault();
+            console.log("Form is not sending")
+            let thisForm = $(this) // the form itself
+            let actionURL= thisForm.attr('action')
+            let httpMethod = thisForm.attr('method')
+            let formData = thisForm.serialize()
+            $.ajax({
+                url:actionURL,
+                method:httpMethod,
+                data:formData,
+                success:function(data){
+                    let submitSpan = thisForm.find(".submit-span")
+                    if(data.added){
+                        submitSpan.html("In cart<button type='submit' class='btn btn-info'>Remove</button>")
+                    }else submitSpan.html("<button type='submit' class='btn btn-success'>Add to cart</button>")
+                },error:function(errorData){
+                    console.log("Error!")
+                    console.log(errorData)
+                }
             
+            })
         })
     })
 </script>
