--- a/Django/Dev/Ecommerce/src/apps/products/templates/products/snippets/update-cart.html
+++ b/Django/Dev/Ecommerce/src/apps/products/templates/products/snippets/update-cart.html
@@ -1,4 +1,4 @@
-<form class="form-product-ajax form my-2 my-lg-0" method="POST" action='{% url "cart:update" %}' >
+<form class="form-product-ajax form my-2 my-lg-0" method="POST" action='{% url "cart:update" %}' data-endpoint='{% url "cart:update" %}'>
         {% csrf_token %}
         <input type='hidden' name='product_id' value='{{ product.id }}' />
 
