--- a/Django/Dev/Ecommerce/src/templates/base/navbar.html
+++ b/Django/Dev/Ecommerce/src/templates/base/navbar.html
@@ -44,7 +44,7 @@
                 </li>
                 {% endif %}
                 <li class="nav-item {% if request.path == cart_url %} active {% endif %}">
-                    <a class="nav-link" href="{{ cart_url }}"><i class="fas fa-shopping-cart"></i> | {{ request.session.cart_items }}</a>
+                    <a class="nav-link" href="{{ cart_url }}"><i class="fas fa-shopping-cart"></i> |<span class="navbar-cart-count">{{ request.session.cart_items }}</span></a>
                 </li>
             </ul>
             {% include 'search/snippets/search-form.html' %}
