--- a/Django/Dev/Ecommerce/src/templates/base/js.html
+++ b/Django/Dev/Ecommerce/src/templates/base/js.html
@@ -37,7 +37,7 @@
                     navbarCount.text(data.cartItemCount) // updates cart icon
                     let currentPath = window.location.href
                     console.log(currentPath)
-                    if(currentPath.indexOf("cart")!= 1){ // if carts is in current path
+                    if(currentPath.indexOf("update")!= 1){ // if carts is in current path
                         refreshCart()
                     }
                 },error:function(errorData){
@@ -51,9 +51,10 @@
             console.log('In current Cart')
             let cartTable = $(".cart-table")
             let cartBody = cartTable.find(".cart-body")
-            cartBody.html("<h1>Changed<h1>")
-            
-            let refreshCartUrl = '/api/cart'
+            let productRows = cartBody.find(".cart-product")
+            let currentUrl = window.location.href
+
+            let refreshCartUrl = '/api/cart/update/cart'
             let refreshCartMethod = "GET"
             let data = {}
 
@@ -64,6 +65,21 @@
                 success:function(data){
                     console.log("Success")
                     console.log(data)
+                if(data.products.length > 0){
+                productRows.html(" ")
+                let i = 1
+                $.each(data.products, function(index, value){
+                    console.log("value and index ", value)
+                    cartBody.prepend("<tr><th scope=\"row\">"+ i +"</th><td>" + value.name +" </td><td>" + value.price +" </td><tr>")
+                    i++
+                })
+
+               
+                cartBody.find(".cart-subtotal").text(data.subtotal)
+                cartBody.find(".cart-total").text(data.total)
+                }else{
+                    window.location.href = currentUrl
+                }
                     
                 },
                 error:function(errorData){
