added remove button with dynamic rendering in cart

--- a/Django/Dev/Ecommerce/src/apps/products/templates/products/snippets/card.html
+++ b/Django/Dev/Ecommerce/src/apps/products/templates/products/snippets/card.html
@@ -11,6 +11,7 @@
           <p class="card-text">{{ instance.description |truncatewords:12 }}.</p>
           <a href="{{ instance.get_absolute_url }}" class="btn btn-primary">View</a>
           <a href="{% url 'products:detail' slug=instance.slug %}" class="btn btn-success">URL Shortcut</a>
+          {% include 'products/snippets/update-cart.html' with product=instance cart=cart %}
         </div>
 </div>
 
