--- a/Django/Dev/Ecommerce/src/templates/base/js.html
+++ b/Django/Dev/Ecommerce/src/templates/base/js.html
@@ -57,21 +57,24 @@
             let refreshCartUrl = '/api/cart/update/cart'
             let refreshCartMethod = "GET"
             let data = {}
-
+            
             $.ajax({
                 url: refreshCartUrl,
                 method:refreshCartMethod,
                 data:data,
                 success:function(data){
-                    console.log("Success")
-                    console.log(data)
+                    let hiddenCartItemRemoveForm = $(".cart-item-remove-form")
+
                 if(data.products.length > 0){
                 productRows.html(" ")
-                let i = 1
+                let i = data.products.length
                 $.each(data.products, function(index, value){
-                    console.log("value and index ", value)
-                    cartBody.prepend("<tr><th scope=\"row\">"+ i +"</th><td>" + value.name +" </td><td>" + value.price +" </td><tr>")
-                    i++
+                    console.log(`Value is ${value.id}`)
+                    let newCartItemRemove=hiddenCartItemRemoveForm.clone()
+                    newCartItemRemove.css('display', 'block')
+                    newCartItemRemove.find(".cart-item-product-id").val(value.id)
+                    cartBody.prepend("<tr><th scope=\"row\">"+ i +"</th><td><a href='"+ value.url+"'>" + value.name +"</a>" + newCartItemRemove.html()+"</td><td>" + value.price +" </td><tr>")
+                    i--
                 })
 
                
