--- a/Django/Dev/Ecommerce/src/templates/base/js.html
+++ b/Django/Dev/Ecommerce/src/templates/base/js.html
@@ -9,12 +9,47 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
  crossorigin="anonymous"></script>
 
+ <!-- JQuery Confirm js-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
+
 <script type="text/javascript">
     'use strict';
     $(document).ready(function(){
-        let productForm =$(".form-product-ajax")
-        
-        productForm.submit(function(e){
+         /* Auto Search */
+         let searchForm = $(".search-form")
+         let searchInput = searchForm.find("[name='q']") //input name ="q"
+         let typingTimer;
+         let typingInterval = 500 // 5 seconds
+         let searchBtn = searchForm.find("[type='submit']")
+         
+         searchInput.keyup(function(e){
+            clearTimeout(typingTimer) // key released
+            typingTimer = setTimeout(performSearch, typingInterval)
+         })
+
+         searchInput.keydown(function(e){
+            clearTimeout(typingTimer) // key down pressed
+         })
+
+         function displaySearching(){
+            searchBtn.addClass("disabled")
+            searchBtn.html("<i class='fa fa-spin fa-spinner'></i> Searching...")
+          }
+
+        function performSearch(){
+            displaySearching()
+            searchBtn.html()
+            let query = searchInput.val()
+            setTimeout(function(){
+            window.location.href=`/search/?q=${query}`
+            }, 1000)
+        }
+
+
+
+
+        /* Cart + Add Products */
+        $(document).on("submit", ".form-product-ajax", function(e){
             e.preventDefault();
             //console.log("Form is not sending")
             let thisForm = $(this) // the form itself
@@ -41,7 +76,11 @@
                         refreshCart()
                     }
                 },error:function(errorData){
-                    console.log("Error!")
+                    $.alert({
+                        title:"Ooops",
+                        content:"An error ocurred",
+                        theme:"modern"
+                    })
                     console.log(errorData)
                 }
                 
@@ -86,7 +125,11 @@
                     
                 },
                 error:function(errorData){
-                    console.log("Error")
+                    $.alert({
+                        title:"Ooops",
+                        content:"An error ocurred",
+                        theme:"modern"
+                    })
                     console.log(errorData)
                 }
             })
