--- a/Django/Dev/Ecommerce/src/templates/contact/contact_page.html
+++ b/Django/Dev/Ecommerce/src/templates/contact/contact_page.html
@@ -12,7 +12,7 @@
         <div class="col">
             <p>{{ content }}</p>
             <div class="col-sm-6 col-12">
-                <form action="" method="POST">
+                <form class='contact-form' action='{% url "contact" %}' method="POST">
                     {% csrf_token %}
                     {% for field in form %}
                     <div class="form-group row">
